[project]
name = "pyyeti"
version = "1.4.5"
description = "Tools mostly related to structural dynamics"
readme = "README.md"
authors = [{ name = "Tim Widrick", email = "twmacro@gmail.com" }]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]

requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "xlsxwriter",
    "h5py",
    "numba>=0.54",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = [
    "sphinx>=4.0",
    "ipython",
    "notebook",
    "sphinx-toggleprompt",
    "sphinx-copybutton",
    "pygments",
    "openpyxl",
    "xlsxwriter",
]
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    # Documentation
    "sphinx>=4.0",
    "ipython",
    "notebook",
    "sphinx-toggleprompt",
    "sphinx-copybutton",
    "pygments",
    "openpyxl",
    "xlsxwriter",
    # Linting
    "black",
    "flake8",
    "isort",
    # Build tools
    "build",
]

[project.scripts]
lsop2 = "pyyeti.scripts.lsop2:main"
lsop4 = "pyyeti.scripts.lsop4:main"


[tool.black]
line-length = 88


[tool.cibuildwheel]
build-frontend = "build"
archs = ["auto64"]
skip = [
    "pp*",    # PyPy
    "*musl*", # musllinux
]


[tool.coverage.report]
show_missing = true


[tool.isort]
profile = "black"


[tool.setuptools]
packages = [
    "pyyeti",
    "pyyeti.cla",
    "pyyeti.nastran",
    "pyyeti.ode",
    "pyyeti.rainflow",
    "pyyeti.scripts",
    "pyyeti.tests",
    "pyyeti.tests.cla_test_data",
    "pyyeti.tests.cla_test_data.fake_cla",
    "pyyeti.tests.cla_test_data.owlab",
    "pyyeti.tests.cla_test_data.summary",
    "pyyeti.tests.cla_test_data.toeco",
    "pyyeti.tests.cla_test_data.toes",
    "pyyeti.tests.cla_test_data_2020",
    "pyyeti.tests.ltmdrfuncs",
    "pyyeti.tests.nas2cam",
    "pyyeti.tests.nas2cam_csuper",
    "pyyeti.tests.nas2cam_csuper.yeti_outputs",
    "pyyeti.tests.nas2cam_extseout",
    "pyyeti.tests.nastran_dmig_data",
    "pyyeti.tests.nastran_drm12",
    "pyyeti.tests.nastran_gm_data",
    "pyyeti.tests.nastran_op2_data",
    "pyyeti.tests.nastran_op4_data",
]
include-package-data = true


[build-system]
requires = [
    "setuptools",
    "numpy",      # needed to call get_include() function
]
build-backend = "setuptools.build_meta"
