[nosetests]
verbosity=2
# detailed-errors=0
with-doctest=1
with-coverage=1
cover-package=pyyeti
cover-erase=1
noexe=1
ignore-files='^$'
# debug=nose.loader
# pdb=1
# pdb-failures=1

[metadata]
description-file = README.md
license-file = LICENSE.txt

[coverage:run]
# branch=True
# concurrency=multiprocessing
# parallel=True

[coverage:report]
# cmd-line:  coverage report -m
show_missing=1

# [bdist_wheel]
# python-tag = py36

# [bdist_wheel]
# universal = true

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
