# [metadata]
# description_file = README.md
# license_file = LICENSE.txt

[coverage:run]
# branch=True
# concurrency=multiprocessing
# parallel=True

[coverage:report]
# cmd-line:  coverage report -m
show_missing=1

# [bdist_wheel]
# python-tag = py36

# [bdist_wheel]
# universal = true

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
